add README.md. Remove use of Java 17 features.